Improved look and feel entrant editors and race editor

--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -16,7 +16,8 @@
                     <MudItem xs="12">
                         <MudPaper Class="pa-4">
                             <MudText>Hello, the season year is @Season.Year</MudText>
-                            <MudText>Current status of the season: in-development</MudText>
+                            <MudText>Currenly in status: @Season.State.ToString()</MudText>
+                            <MudText>Development status: season configuration is done</MudText>
                         </MudPaper>
                     </MudItem>
                     <MudItem xs="6">
@@ -86,13 +87,13 @@
                             }
                             else
                             {
-                                <MudText>Where are the friggin point allotments</MudText>
+                                <MudAlert Variant="Variant.Outlined" Severity="Severity.Error">Where are the friggin point allotments</MudAlert>
                             }
                         </MudPaper>
                     </MudItem>
                     <MudItem>
                         <MudStack Row="true">
-                            <MudText>H</MudText>
+                            <MudText>[placeholder]</MudText>
                             <MudSpacer />
                             <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" StartIcon="@Icons.Material.Outlined.Edit" OnClick="UpdateSeason">Edit settings</MudButton>
                         </MudStack>
