--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -2,7 +2,8 @@
 
 <MudDialog>
     <TitleContent>
-        <MudText>Add race</MudText>
+        <MudText Typo="Typo.h6">Add race</MudText>
+        <MudText Typo="Typo.body1">Stint's can be re-ordered by dragging them</MudText>
     </TitleContent>
     <DialogContent>
         <MudGrid>
@@ -31,35 +32,24 @@
 
             <MudItem xs="12">
                 <MudStack Row="true">
-                    <MudNumericField T="int" @bind-Value="_amountStints" Label="Amount of stints" ReadOnly="_amountReadonly" />
-                    <MudButton OnClick="SetStintAmount" Variant="Variant.Filled" Color="Color.Primary" Disabled="_amountReadonly">
+                    <MudNumericField T="int" @bind-Value="_amountStints" Label="Amount of stints"  />
+                    <MudButton OnClick="SetStintAmount" Variant="Variant.Filled" Color="Color.Primary" >
                         Set amount and edit stints
                     </MudButton>
                 </MudStack>
             </MudItem>
 
-            <MudItem xs="12" Class="@(_amountReadonly ? "" : "d-none")">
-                <MudText>Stint setup for the race</MudText>
-                <MudStack Spacing="3" Row="true">
-                    <MudText>Order</MudText>
-                    <MudText>Driver</MudText>
-                    <MudText>Car</MudText>
-                    <MudText>Engine</MudText>
-                    <MudText>Reliability</MudText>
-                    <MudText>RngMin</MudText>
-                    <MudText>RngMax</MudText>
-                </MudStack>
+            <MudItem xs="12">
                 <MudDropContainer T="EditStintModel" Items="model.Stints" @ref="_container" ItemsSelector="(item, zone) => true" ItemDropped="ItemDropped">
                     <ChildContent>
-                        <MudPaper Class="ma-4">
-                            <MudList>
-                                <MudDropZone T="EditStintModel" Identifier="temp" AllowReorder="true" />
-                            </MudList>
+                        <MudPaper Elevation="15" Class="ma-2 pa-2">
+                            <MudText>Stint setup for the race</MudText>
+                            <MudDropZone T="EditStintModel" Identifier="temp" AllowReorder="true" />
                         </MudPaper>
                     </ChildContent>
                     <ItemRenderer>
-                        <MudListItem>
-                            <MudStack Spacing="2" Row="true">
+                        <MudPaper Elevation="25" Class="ma-2 pa-2">
+                            <MudStack Spacing="2" Row="true" Justify="Justify.SpaceEvenly">
                                 <MudText>@(1 + context.Order)</MudText>
                                 <MudCheckBox @bind-Checked="context.UseDriver" Color="Color.Tertiary" Label="Driver" />
                                 <MudCheckBox @bind-Checked="context.UseCar" Color="Color.Tertiary" Label="Car" />
@@ -68,7 +58,7 @@
                                 <MudNumericField T="int" @bind-Value="context.RngMin" Label="RngMin" />
                                 <MudNumericField T="int" @bind-Value="context.RngMax" Label="RngMax" />
                             </MudStack>
-                        </MudListItem>
+                        </MudPaper>
                     </ItemRenderer>
                 </MudDropContainer>
             </MudItem>
@@ -80,7 +70,7 @@
     </DialogActions>
 </MudDialog>
 
-@code {
+    @code {
     [CascadingParameter] protected MudDialogInstance? RaceDialog { get; set; }
 
     [Parameter] public Race? Race { get; set; }
@@ -89,7 +79,6 @@
     private EditRaceModel model = new();
     private MudDropContainer<EditStintModel> _container;
     private int _amountStints { get; set; }
-    private bool _amountReadonly = false;
     private int orderNum = 0;
 
     protected override void OnInitialized()
@@ -103,14 +92,27 @@
 
     private void SetStintAmount()
     {
-        for (int i = 0; i < _amountStints; i++)
+        if (_amountStints > orderNum)
         {
-            AddStint();
+            for (; orderNum < _amountStints; orderNum++)
+            {
+                model.Stints.Add(new EditStintModel
+                    {
+                        Order = orderNum,
+                        RngMin = 20,
+                        RngMax = 40
+                    });
+            }
+        }
+        else
+        {
+            for (; orderNum > _amountStints; orderNum--)
+            {
+                model.Stints.RemoveAt(orderNum - 1);
+            }
         }
 
         RefreshContainer();
-
-        _amountReadonly = !_amountReadonly;
     }
 
     private void AddStint()
