--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -10,9 +10,16 @@
 <MudDataGrid T="SeasonTeam" Items="SeasonTeamEntrants">
     <Columns>
         <PropertyColumn Property="e => e.Name" CellStyleFunc="@_teamStyleFunc" />
-        <TemplateColumn Title="Cuntry">
+        <TemplateColumn Title="Country">
             <CellTemplate>
-                <MudText>@(context.Item.Team?.Country.CountryCodeToEmoji() ?? "lol dunno, man")</MudText>
+                @if (context.Item.Team is not null)
+                {
+                    <CountryFlag Code="@context.Item.Team.Country" Size="FlagSize.Normal" IncludeName="true" />
+                }
+                else
+                {
+                    <MudText>[wtf, no base team?]</MudText>
+                }
             </CellTemplate>
         </TemplateColumn>
         <PropertyColumn Property="e => e.Principal" />
@@ -23,9 +30,10 @@
             </CellTemplate>
         </TemplateColumn>
         <PropertyColumn Property="e => e.Reliability" />
+        <PropertyColumn Property="e => e.SeasonEngine.Name" />
         <TemplateColumn Title="Manufacturer">
             <CellTemplate>
-                <MudText>@(ManufacturerData.Find(e => e.Id == context.Item.ManufacturerId)?.Name ?? "[ERR: DIDN'T DETECT MANUFACTURER]")</MudText>
+                <MudText>@(ManufacturerData.Find(e => e.Id == context.Item.ManufacturerId)?.Name ?? "[error: wtf where manufacturer?]")</MudText>
             </CellTemplate>
         </TemplateColumn>
         <TemplateColumn CellClass="d-flex justify-end">
