godverde stik in je huig

--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -89,6 +89,7 @@
             {
                 ["Race"] = item,
                 ["Tracks"] = availableTracks,
+                ["SeasonId"] = Season.Id,
                 ["IncomingRound"] = (RaceData.Count + 1)
             };
 
