Can activate for real now!

--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -34,7 +34,7 @@
                                 <MudListSubheader>Development ranges for @rangeGroup.Key.ToString()</MudListSubheader>
                                 @foreach (var range in rangeGroup)
                                 {
-                                    <MudListItem>@range.Comparer - @range.Minimum - @range.Maximum</MudListItem>
+                                    <MudListItem>@range.Comparer | @range.Minimum ↔ @range.Maximum</MudListItem>
                                 }
                             </MudList>
                         </MudPaper>
