--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -119,7 +119,7 @@
     {
         if (Season != null)
         {
-            _errorMessage = await SeasonService.ActivateSeason(Season);
+            _errorMessage = await SeasonService.ActivateSeason(Season.Id);
 
             if (_errorMessage == null)
                 Snackbar.Add($"Season {Season.Year} has been activated!", Severity.Success);
