--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -30,7 +30,7 @@
             </CellTemplate>
         </TemplateColumn>
         <PropertyColumn Property="e => e.Reliability" />
-        <PropertyColumn Property="e => e.SeasonEngineId" />
+        <PropertyColumn Property="e => e.SeasonEngineId" Title="Engine" />
         <TemplateColumn Title="Manufacturer">
             <CellTemplate>
                 <MudText>
