--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -1,7 +1,6 @@
 ﻿@inject SeasonEntrantService EntrantService
 
 <MudContainer>
-    <MudText>Je suis incomplementa</MudText>
     <MudGrid Spacing="3">
         <MudItem xs="6">
             <MudPaper Elevation="15">
@@ -52,7 +51,7 @@
                             {
                                 <CountryFlag Code="context.Team.Country" Size="FlagSize.Small" />
                             }
-                            @context.Name;
+                            @context.Name
                         </MudTd>
                         <MudTd DataLabel="Points">@context.Points</MudTd>
                     </RowTemplate>
