--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -15,7 +15,7 @@
             <HierarchyColumn T="Driver" />
             <PropertyColumn Property="e => e.FullName" />
             <PropertyColumn Property="e => e.Abbreviation" />
-            <PropertyColumn Property="e => e.DateOfBirth" />
+            <PropertyColumn Property="e => e.DateOfBirth" Title="DOB" Format="d" />
             <TemplateColumn T="Driver" Title="Country">
                 <CellTemplate>
                     <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
