--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -18,7 +18,7 @@
         <RowTemplate>
             <MudTd>@context.Name</MudTd>
             <MudTd>@context.State</MudTd>
-            <MudTd>
+            <MudTd Class="d-flex justify-end">
                 <MudButtonGroup Size="@Size.Small">
                     <MudIconButton Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateEngine(context))" />
                     <MudIconButton Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await DeleteEngine(context))" />
