--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -1,24 +1,370 @@
 ﻿@page "/raceweek/{RaceId:long}"
 
 @inject RaceService _raceService
+@inject IDialogService DialogService
+@inject ISnackbar Snackbar
 
-<h3>RaweCeek</h3>
+<style type="text/css">
+    .raceweek-grid {
+        display: grid;
+        gap: 1em;
+        grid-template-columns: [begin] 1fr 1fr 1fr [end];
+        grid-template-rows: [begin] 1fr 1fr 1fr [end];
+        grid-template-areas:
+            "grid title info"
+            "grid buttons info"
+            "grid stints stints";
+    }
 
-<MudGrid>
+    .test-dialog-shadow {
+        box-shadow: var(--mud-palette-secondary) 0 0 2em;
+    }
+</style>
 
-</MudGrid>
+@if (loading)
+{
+    <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudProgressCircular Color="Color.Secondary" Size="Size.Large" Indeterminate="true" />
+            <MudText>... retrieving rawe ceek data</MudText>
+        </MudStack>
+    </MudPaper>
+}
+else
+{
+    <MudGrid>
+        <MudItem xs="4">
+            <MudPaper Class="pa-4" Style="height: 100%">
+                <MudTable Items="@ViewModel.RaceWeekDrivers" Dense="true">
+                    <HeaderContent>
+                        <MudTh>#</MudTh>
+                        <MudTh>Name</MudTh>
+                        <MudTh>Strategy</MudTh>
+                        <MudTh>Penalty</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd Style="@(ViewHelper.GetGradientCellStyle(context.Colour, context.Accent))">
+                            @context.Position
+                        </MudTd>
+                        <MudTd>@context.FullName</MudTd>
+                        <MudTd>
+                            @if (context.Strategy is null)
+                            {
+                                <MudText>ferrari (no strategy)</MudText>
+                            }
+                            else
+                            {
+                                <MudStack Spacing="1" Row="true">
+                                    @foreach (var tyreElem in context.Strategy.StrategyTyres)
+                                    {
+                                        <span class="tyre" style="border-color:@(tyreElem.Tyre.Colour)">
+                                            @tyreElem.Tyre.Name.ElementAt(0)
+                                        </span>
+                                    }
+                                </MudStack>
+                            }
+                            <MudFab Color="Color.Secondary" StartIcon="@Icons.Material.Filled.Edit" Size="Size.Small" OnClick="@(async () => await PickStrategy(context.ResultId))" />
+                        </MudTd>
+                        <MudTd>todo</MudTd>
+                    </RowTemplate>
+                </MudTable>
+            </MudPaper>
+        </MudItem>
+
+        <MudItem xs="8">
+            <MudGrid>
+                <MudItem xs="6">
+                    <MudPaper Class="pa-4">
+                        <MudText Typo="Typo.h4">
+                            <CountryFlag Code="@ViewModel.Race.Track.Country" Size="FlagSize.Normal" />
+                            @ViewModel.Race.Name
+                        </MudText>
+                        @if (ViewModel.TrackTraits?.Any() == true)
+                        {
+                            <MudList>
+                                <MudListSubheader>Traits of this circuit</MudListSubheader>
+                                @foreach (var trait in ViewModel.TrackTraits)
+                                {
+                                    <MudListItem>
+                                        @trait.Name - @trait.Description
+                                    </MudListItem>
+                                }
+                            </MudList>
+                        }
+                    </MudPaper>
+                </MudItem>
+
+                <MudItem xs="6">
+                    <MudPaper Class="pa-4" Style="grid-area:info;">
+                        <MudList>
+                            <MudListSubheader>Track info</MudListSubheader>
+                            <MudListItem>Length: @ViewModel.Race.Track.Length</MudListItem>
+                            <MudListItem>Aero mod: @ViewModel.Race.Track.AeroMod</MudListItem>
+                            <MudListItem>Chassis mod: @ViewModel.Race.Track.ChassisMod</MudListItem>
+                            <MudListItem>Power mod: @ViewModel.Race.Track.PowerMod</MudListItem>
+                            <MudListItem>Qualy mod: @ViewModel.Race.Track.QualifyingMod</MudListItem>
+                            <MudListItem>Weather: @ViewModel.Race.Weather</MudListItem>
+                        </MudList>
+                        @if (ViewModel.AvailableStrategies?.Any() == true)
+                        {
+                            <MudList>
+                                <MudListSubheader>Available strategies for race</MudListSubheader>
+                                @foreach (var strategy in ViewModel.AvailableStrategies)
+                                {
+                                    <MudListItem>
+                                        <MudStack Spacing="1" Row="true">
+                                            @foreach (var tyreElem in strategy.StrategyTyres)
+                                            {
+                                                <span class="tyre" style="border-color:@(tyreElem.Tyre.Colour)">
+                                                    @tyreElem.Tyre.Name.ElementAt(0)
+                                                </span>
+                                            }
+                                        </MudStack>
+                                    </MudListItem>
+                                }
+                            </MudList>
+                        }
+                    </MudPaper>
+                </MudItem>
+
+                <MudItem xs="6">
+                    <MudPaper Class="pa-4" Style="grid-area:buttons;">
+                        <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined" VerticalAlign="true">
+                            @if (ViewModel.Race.State == State.Active)
+                            {
+                                <MudButton OnClick="TempButtonEvent">Prac</MudButton>
+                                <MudButton OnClick="TempButtonEvent">Qual</MudButton>
+                            }
+                            else if (ViewModel.Race.State != State.Concept)
+                            {
+                                <MudButton OnClick="TempButtonEvent">Race</MudButton>
+                            }
+                        </MudButtonGroup>
+                    </MudPaper>
+                </MudItem>
+
+                <MudItem xs="6">
+                    <MudPaper>
+                        miauw
+                    </MudPaper>
+                </MudItem>
+
+                <MudItem xs="12">
+                    <MudPaper Class="pa-4" Style="grid-area:stints;">
+                        <MudTable Items="@ViewModel.Race.Stints" Dense="true">
+                            <HeaderContent>
+                                <MudTh>#</MudTh>
+                                <MudTh>Driver</MudTh>
+                                <MudTh>Car</MudTh>
+                                <MudTh>Engine</MudTh>
+                                <MudTh>Reliability</MudTh>
+                                <MudTh>RngMin</MudTh>
+                                <MudTh>RngMax</MudTh>
+                            </HeaderContent>
+                            <RowTemplate>
+                                <MudTd>@context.Order</MudTd>
+                                <MudTd>
+                                    @if (context.StintEvents.HasFlag(StintEvent.Driver))
+                                    {
+                                        <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                                    }
+                                </MudTd>
+                                <MudTd>
+                                    @if (context.StintEvents.HasFlag(StintEvent.Car))
+                                    {
+                                        <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                                    }
+                                </MudTd>
+                                <MudTd>
+                                    @if (context.StintEvents.HasFlag(StintEvent.Engine))
+                                    {
+                                        <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                                    }
+                                </MudTd>
+                                <MudTd>
+                                    @if (context.StintEvents.HasFlag(StintEvent.Reliability))
+                                    {
+                                        <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                                    }
+                                </MudTd>
+                                <MudTd>@context.RngMin</MudTd>
+                                <MudTd>@context.RngMax</MudTd>
+                            </RowTemplate>
+                        </MudTable>
+                    </MudPaper>
+                </MudItem>
+            </MudGrid>
+        </MudItem>
+    </MudGrid>
+    @*<MudContainer Class="raceweek-grid">
+        <MudPaper Class="pa-4" Style="grid-area:grid;">
+            <MudTable Items="@ViewModel.RaceWeekDrivers" Dense="true">
+                <HeaderContent>
+                    <MudTh>#</MudTh>
+                    <MudTh>Name</MudTh>
+                    <MudTh>Strategy</MudTh>
+                    <MudTh>Penalty</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    <MudTd Style="@(ViewHelper.GetGradientCellStyle(context.Colour, context.Accent))">
+                        @context.Position
+                    </MudTd>
+                    <MudTd>@context.FullName</MudTd>
+                    <MudTd>
+                        @if (context.Strategy is null)
+                        {
+                            <MudText>ferrari (no strategy)</MudText>
+                        }
+                        else
+                        {
+                            <MudStack Spacing="1" Row="true">
+                                @foreach (var tyreElem in context.Strategy.StrategyTyres)
+                                {
+                                    <span class="tyre" style="border-color:@(tyreElem.Tyre.Colour)">
+                                        @tyreElem.Tyre.Name.ElementAt(0)
+                                    </span>
+                                }
+                            </MudStack>
+                        }
+                    </MudTd>
+                    <MudTd>todo</MudTd>
+                </RowTemplate>
+            </MudTable>
+        </MudPaper>
+
+        <MudPaper Class="pa-4" Style="grid-area:title;">
+            <MudText Typo="Typo.h4">
+                <CountryFlag Code="@ViewModel.Race.Track.Country" Size="FlagSize.Normal" />
+                @ViewModel.Race.Name
+            </MudText>
+        </MudPaper>
+
+        <MudPaper Class="pa-4" Style="grid-area:info;">
+            <MudList>
+                <MudListSubheader>Track info</MudListSubheader>
+                <MudListItem>Length: @ViewModel.Race.Track.Length</MudListItem>
+                <MudListItem>Aero mod: @ViewModel.Race.Track.AeroMod</MudListItem>
+                <MudListItem>Chassis mod: @ViewModel.Race.Track.ChassisMod</MudListItem>
+                <MudListItem>Power mod: @ViewModel.Race.Track.PowerMod</MudListItem>
+                <MudListItem>Qualy mod: @ViewModel.Race.Track.QualifyingMod</MudListItem>
+                <MudListItem>Weather: @ViewModel.Race.Weather</MudListItem>
+            </MudList>
+            @if (ViewModel.TrackTraits?.Any() == true)
+            {
+                <MudList>
+                    <MudListSubheader>Traits of this circuit</MudListSubheader>
+                    @foreach (var trait in ViewModel.TrackTraits)
+                    {
+                        <MudListItem>
+                            @trait.Name - @trait.Description
+                        </MudListItem>
+                    }
+                </MudList>
+            }
+            @if (ViewModel.AvailableStrategies?.Any() == true)
+            {
+                <MudList>
+                    <MudListSubheader>Available strategies for race</MudListSubheader>
+                    @foreach (var strategy in ViewModel.AvailableStrategies)
+                    {
+                        <MudListItem>
+                            <MudStack Spacing="1" Row="true">
+                                @foreach (var tyreElem in strategy.StrategyTyres)
+                                {
+                                    <span class="tyre" style="border-color:@(tyreElem.Tyre.Colour)">
+                                        @tyreElem.Tyre.Name.ElementAt(0)
+                                    </span>
+                                }
+                            </MudStack>
+                        </MudListItem>
+                    }
+                </MudList>
+            }
+        </MudPaper>
+
+        <MudPaper Class="pa-4" Style="grid-area:buttons;">
+            <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined" VerticalAlign="true">
+                <MudButton OnClick="TempButtonEvent">Prac</MudButton>
+                <MudButton OnClick="TempButtonEvent">Qual</MudButton>
+                <MudButton OnClick="TempButtonEvent">Race</MudButton>
+            </MudButtonGroup>
+        </MudPaper>
+
+        <MudPaper Class="pa-4" Style="grid-area:stints;">
+            <MudTable Items="@ViewModel.Race.Stints" Dense="true">
+                <HeaderContent>
+                    <MudTh>#</MudTh>
+                    <MudTh>Driver</MudTh>
+                    <MudTh>Car</MudTh>
+                    <MudTh>Engine</MudTh>
+                    <MudTh>Reliability</MudTh>
+                    <MudTh>RngMin</MudTh>
+                    <MudTh>RngMax</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    <MudTd>@context.Order</MudTd>
+                    <MudTd>
+                        @if (context.StintEvents.HasFlag(StintEvent.Driver))
+                        {
+                            <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                        }
+                    </MudTd>
+                    <MudTd>
+                        @if (context.StintEvents.HasFlag(StintEvent.Car))
+                        {
+                            <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                        }
+                    </MudTd>
+                    <MudTd>
+                        @if (context.StintEvents.HasFlag(StintEvent.Engine))
+                        {
+                            <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                        }
+                    </MudTd>
+                    <MudTd>
+                        @if (context.StintEvents.HasFlag(StintEvent.Reliability))
+                        {
+                            <MudIcon Icon="@Icons.Material.TwoTone.CheckCircle" Color="Color.Tertiary" Size="Size.Large" />
+                        }
+                    </MudTd>
+                    <MudTd>@context.RngMin</MudTd>
+                    <MudTd>@context.RngMax</MudTd>
+                </RowTemplate>
+            </MudTable>
+        </MudPaper>
+    </MudContainer>*@
+}
 
 @code {
     [Parameter] public long RaceId { get; set; }
 
-    public Race? Race { get; set; }
+    private RaceWeekModel ViewModel { get; set; }
 
     private bool loading = true;
 
     protected override async Task OnInitializedAsync()
     {
-        Race = await _raceService.GetRaceById(RaceId);
+        ViewModel = await _raceService.GetRaceWeekModel(RaceId);
 
         loading = false;
+    }
+
+    private void TempButtonEvent() => Snackbar.Add("not implemented yet", Severity.Error);
+
+    async Task PickStrategy(long resultId)
+    {
+        var parameters = new DialogParameters 
+            { 
+                ["ResultId"] = resultId,
+                ["Strategies"] = ViewModel.AvailableStrategies,
+            };
+
+        var dialog = await DialogService.ShowAsync<StrategyPicker>("Set strategy", parameters);
+        var result = await dialog.Result;
+
+        if (!result.Canceled && result.Data != null && result.Data is Strategy newStrategy)
+        {
+            
+        }
     }
 }
