--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -31,6 +31,11 @@ html, body {
     font-size: 0.9em;
 }
 
+.accent-cell {
+    width: 7px !important;
+}
+
+/* default blazor css elements */
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
