--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -9,8 +9,7 @@
 </MudContainer>
 <MudDataGrid T="SeasonTeam" Items="@SeasonTeamEntrants">
     <Columns>
-        <PropertyColumn Property="e => e.Name" />
-        <TemplateColumn CellStyleFunc="@ViewHelper.TeamCellStyleFunc" CellClass="accent-cell" />
+        <PropertyColumn Property="e => e.Name" CellStyleFunc="@_teamStyleFunc" />
         <TemplateColumn Title="Country">
             <CellTemplate>
                 @if (context.Item.Team is not null)
@@ -65,7 +64,7 @@
 
     private Func<SeasonTeam, string> _teamStyleFunc => e =>
     {
-        return $"background-color:{e.Colour}; color:{e.Accent}";
+        return $"border-right:solid 10px {e.Colour};";
     };
 
     async Task EnterTeam() => await UpdateTeamEntrant(new SeasonTeam());
